--- a/luckySevens.html
+++ b/luckySevens.html
@@ -5,31 +5,32 @@
 <head>
 <title>Lucky Sevens</title>
 
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="styles/luckySevens.css"/>
-
-
-
 
 
 </head>
 
 <body>
 
+<div id="bg">
 
+<header>
+<h1>Lucky Sevens</h1>
+</header>
 
-
-<h1>lucky sevens</h1>
-
-<p id="moneyInput">money input = </p>
+<p><h2>Enter a Starting Bet</h2></p>
 
 
 	<form  id="moneyform">
-		<label for="input1">Place your bet</label>
-		<input type="number" id="betAmount" value="0"/>
-		<button onclick="playGame()" id="p2" class="playButton" type="button">Play</button>
+		<input type="number" class="form-control" id="betAmount" value="$0.00"/>
+		<button type="button" class="btn btn-primary btn-lg" onclick="playGame()" id="p2">Play</button>
 	</form>
 
-	<table border="1" style="border-collapse: collapse"><caption id="tableCaption">Your initial bet = </caption>
+	<table border="1" style="border-collapse: collapse"><caption id="tableCaption"></caption>
 		<thead>
 			<tr>
 				<th>Starting Bet</th>
@@ -43,7 +44,7 @@
 			</tr>
 			<tr>	
 				<td>Highest Amount Won</td>
-				<td id="highMoney"></td>
+				<td id="highMoney"> </td>
 			</tr>
 			<tr>
 				<td>Roll Count at Highest Amount Won</td>
@@ -51,8 +52,14 @@
 			</tr>
 		</tbody>
 	</table>
-				
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>				
 <script src="scripts/luckySevens.js"></script>
+
+</div>
+
 
 </body>
 
