--- a/luckySevens.html
+++ b/luckySevens.html
@@ -16,20 +16,22 @@
 
 <body>
 
-<div id="bg">
+<div id="bg" class="container-fluid">
+
 
 <header>
-<h1>Lucky Sevens</h1>
+<h1>"Lucky Sevens!"</h1>
 </header>
-
 <p><h2>Enter a Starting Bet</h2></p>
 
 
 	<form  id="moneyform">
-		<input type="number" class="form-control" id="betAmount" value="$0.00"/>
-		<button type="button" class="btn btn-primary btn-lg" onclick="playGame()" id="p2">Play</button>
+		<input type="number" class="form-control" id="betAmount" value="0"/>
+		<button type="button" class="btn btn-primary btn-lg" onclick="playGame()" id="p2" style="visibility:visible">Play</button>
 	</form>
+	<br />
 
+	<p><h2>Results:</h2></p>
 	<table border="1" style="border-collapse: collapse"><caption id="tableCaption"></caption>
 		<thead>
 			<tr>
@@ -52,6 +54,9 @@
 			</tr>
 		</tbody>
 	</table>
+	<div>
+		<button id="playAgain" type="reset" class="btn btn-primary btn lg" onclick="resetTable()" style="visibility:hidden">Play again?</button>
+	</div>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
