--- a/luckySevens.html
+++ b/luckySevens.html
@@ -22,7 +22,7 @@
 <header>
 <h1>"Lucky Sevens!"</h1>
 </header>
-<p><h2>Enter a Starting Bet</h2></p>
+<p><h2>Enter a Starting Bet:</h2></p>
 
 
 	<form  id="moneyform">
