--- a/luckySevens.html
+++ b/luckySevens.html
@@ -21,7 +21,7 @@
 		<div class="row">
 			<div class="col">
 				<header>
-					<h1>"Lucky Sevens!"</h1>
+					<h1>Lucky Sevens!</h1>
 				</header>
 			</div>	
 		</div>
@@ -33,14 +33,11 @@
 			
 			<form  id="moneyform">
 				<div class="row">
-					<div class="col-12">											
+					<div class="col-6">											
 						<input type="number" class="form-control" id="betAmount" value="0"/>
 					</div>
-				</div>
-				<div class="row">
-					<div class="col-12">
+					<div class="col-6">
 						<button type="button" class="btn btn-primary btn-med" onclick="playGame()" id="p2" style="visibility:visible">Play</button>
-					
 					</div>
 				</div>
 			</form>
@@ -70,6 +67,9 @@
 			</table>
 			<div>
 				<button id="playAgain" type="reset" class="btn btn-primary btn lg" onclick="resetTable()" style="visibility:hidden">Play again?</button>
+	<br />
+	<br />
+	
 	</div>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
