--- a/luckySevens.html
+++ b/luckySevens.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 
+<!--
+	Created by Mitch Watson
+	Date Created: 1/3/2020
+	Most recent revision: 1/8/2020 
+-->
+
 <html>
 
 <head>
@@ -26,11 +32,10 @@
 			</div>	
 		</div>
 		<div class="row">
-			<div class="col"
+			<div class="col">
 				<p id="resultsHeader"><h2>Enter a Starting Bet:</h2></p>
 			</div>
-		</div>
-			
+		</div>	
 			<form  id="moneyform">
 				<div class="row">
 					<div class="col-6">											
@@ -43,43 +48,48 @@
 			</form>
 		<div>
 			<p><h2>Results:</h2></p>
-			<table border="1" style="border-collapse: collapse"><caption id="tableCaption"></caption>
-				<thead>
-					<tr>
-						<th>Starting Bet</th>
-						<th id="initialBet"> </th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr>
-						<td>Total Rolls Before Going Broke</td>
-						<td id="totalRolls"> </td>
-					</tr>
-					<tr>	
-						<td>Highest Amount Won</td>
-						<td id="highMoney"> </td>
-					</tr>
-					<tr>
-						<td>Roll Count at Highest Amount Won</td>
-						<td id="rollatHighest"> </td>
-					</tr>
-				</tbody>
-			</table>
-			<div>
-				<button id="playAgain" type="reset" class="btn btn-primary btn lg" onclick="resetTable()" style="visibility:hidden">Play again?</button>
-	<br />
-	<br />
-	
-	</div>
+				<div class="row">
+					<div class="col">
+						<table border="1" style="border-collapse: collapse"><caption id="tableCaption"></caption>
+							<thead>
+								<tr>
+									<th>Starting Bet</th>
+									<th id="initialBet"> </th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr>
+									<td>Total Rolls Before Going Broke</td>
+									<td id="totalRolls"> </td>
+								</tr>
+								<tr>	
+									<td>Highest Amount Won</td>
+									<td id="highMoney"> </td>
+								</tr>
+								<tr>
+									<td>Roll Count at Highest Amount Won</td>
+									<td id="rollatHighest"> </td>
+								</tr>
+							</tbody>
+						</table>
+					</div>	
+			>	</div>
+				<div class="row">
+					<div class="col">
+						<button id="playAgain" type="reset" class="btn btn-primary btn lg" onclick="resetTable()" style="visibility:hidden">Play again?</button>
+		<br />
+		<br />
+					</div>
+				</div>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>				
 <script src="scripts/luckySevens.js"></script>
 
-</div>
+		</div>
 
-
+	</div>
 </body>
 
 </html>
