--- a/luckySevens.html
+++ b/luckySevens.html
@@ -6,6 +6,7 @@
 	Most recent revision: 1/8/2020 
 -->
 
+
 <html>
 
 <head>
@@ -73,7 +74,7 @@
 							</tbody>
 						</table>
 					</div>	
-			>	</div>
+				</div>
 				<div class="row">
 					<div class="col">
 						<button id="playAgain" type="reset" class="btn btn-primary btn lg" onclick="resetTable()" style="visibility:hidden">Play again?</button>
